--- a/FPSSyncApp/MainWindow.xaml
+++ b/FPSSyncApp/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:FPSSyncApp"
+        xmlns:FPSSyncApp="clr-namespace:FPSSyncApp;assembly=FPSSyncApp"
         mc:Ignorable="d"
         Title="FPS Sync" Height="450" Width="800">
     <Grid>
@@ -21,7 +21,7 @@
             <CheckBox x:Name="checkBox" Content="CheckBox" HorizontalAlignment="Left" Margin="396,148,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.273,0.425"/>
         <TextBlock x:Name="textBlock_Copy" HorizontalAlignment="Left" Margin="269,168,0,0" TextWrapping="Wrap" Text="Path" VerticalAlignment="Top"/>
             <Button x:Name="button_Copy" Content="Button" HorizontalAlignment="Left" Margin="257,189,0,0" VerticalAlignment="Top" Width="75" Click="button_Copy_Click"/>
-            <CheckBox x:Name="checkBox_Copy" Content="CheckBox" HorizontalAlignment="Left" Margin="261,148,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.273,0.425"/>
+        <CheckBox x:Name="checkBox_Copy" Content="CheckBox" HorizontalAlignment="Left" Margin="261,148,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.273,0.425"/>
         <Button x:Name="sync_button" Content="Sync" HorizontalAlignment="Left" Margin="624,294,0,0" VerticalAlignment="Top" Width="75"/>
         </Grid>
 </Window>
